(lang dune 3.12)

(name advent)

(generate_opam_files true)

(source
 (github znd4/advent-of-code))

(authors "Zane Dufour")

(maintainers "Zane Dufour")

(license MIT)

; (documentation https://url/to/documentation)

(package
 (name advent)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
